[gd_scene load_steps=5 format=3 uid="uid://d2ak5p6ml1vwf"]

[ext_resource type="Script" path="res://Scripts/GameManager.gd" id="1_gamemanager"]
[ext_resource type="PackedScene" uid="uid://csgk5qd7oe8pb" path="res://Scenes/Player.tscn" id="2_player"]
[ext_resource type="PackedScene" uid="uid://d2ve5vym4axl8" path="res://Scenes/Dummy.tscn" id="3_dummy"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ground"]
size = Vector2(1920, 180)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wall"]
size = Vector2(50, 1080)

[node name="Game" type="Node2D"]
script = ExtResource("1_gamemanager")

[node name="Background" type="ColorRect" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0.2, 0.15, 0.25, 1)

[node name="Ground" type="StaticBody2D" parent="."]
position = Vector2(0, 900)

[node name="GroundVisual" type="ColorRect" parent="Ground"]
offset_right = 1920.0
offset_bottom = 180.0
color = Color(0.3, 0.25, 0.3, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground"]
position = Vector2(960, 90)
shape = SubResource("RectangleShape2D_ground")

[node name="Player" parent="." instance=ExtResource("2_player")]
position = Vector2(600, 800)

[node name="Dummy" parent="." instance=ExtResource("3_dummy")]
position = Vector2(1200, 800)

[node name="LeftWall" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftWall"]
position = Vector2(-25, 540)
shape = SubResource("RectangleShape2D_wall")

[node name="RightWall" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightWall"]
position = Vector2(1945, 540)
shape = SubResource("RectangleShape2D_wall")

[node name="UI" type="CanvasLayer" parent="."]

[node name="TimerLabel" type="Label" parent="UI"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 40.0
offset_right = 100.0
offset_bottom = 120.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 64
text = "60.0"
horizontal_alignment = 1

[node name="ComboLabel" type="Label" parent="UI"]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -50.0
offset_right = -50.0
offset_bottom = 50.0
grow_horizontal = 0
grow_vertical = 2
theme_override_colors/font_color = Color(1, 0.85, 0.4, 1)
theme_override_font_sizes/font_size = 48
text = "0 HITS"
horizontal_alignment = 2
vertical_alignment = 1

[node name="DamageLabel" type="Label" parent="UI"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -120.0
offset_right = 200.0
offset_bottom = -60.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(1, 0.4, 0.4, 1)
theme_override_font_sizes/font_size = 42
text = "Total: 0"
horizontal_alignment = 1

[node name="GameOverPanel" type="Panel" parent="UI"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -200.0
offset_right = 300.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI/GameOverPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="UI/GameOverPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 56
text = "TIME'S UP!"
horizontal_alignment = 1

[node name="ScoreLabel" type="Label" parent="UI/GameOverPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Total Damage: 0"
horizontal_alignment = 1

[node name="HitsLabel" type="Label" parent="UI/GameOverPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Total Hits: 0"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="UI/GameOverPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="RetryButton" type="Button" parent="UI/GameOverPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "RETRY"

[node name="MenuButton" type="Button" parent="UI/GameOverPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "MAIN MENU"

[connection signal="pressed" from="UI/GameOverPanel/VBoxContainer/RetryButton" to="." method="_on_retry_button_pressed"]
[connection signal="pressed" from="UI/GameOverPanel/VBoxContainer/MenuButton" to="." method="_on_menu_button_pressed"]

